--- a/src/test/resources/obiee.properties
+++ b/src/test/resources/obiee.properties
@@ -2,7 +2,7 @@
 #obiee.endpoint.baseUrl=https://insighttest.ccci.org
 obiee.endpoint.baseUrl=http://slobiw02.ccci.org:7777
 obiee.username=ssw.test.obiee.user@ccci.org
-obiee.password=CcciSsw1234
+obiee.password=1234
 
 #for now, staging is really really slow.  So set up a ten minute read timeout.
 obiee.readTimeout=600000
